"indep hint to last problem"

--- a/prob1_2025/indep.html
+++ b/prob1_2025/indep.html
@@ -150,26 +150,7 @@ function myFunction() {
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3/>
-<ul>
-<li>
-<a href="#Independence">Independence</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Two events">Two events</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#More than two events">More than two events</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Product space">Product space</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Infinite product">Infinite product</a>
-</li>
-<li>
-<a href="#Problems for practice">Problems for practice</a>
-</li>
-</ul>
+<ul/>
 <hr/>
 
 
@@ -545,10 +526,10 @@ So $A-B &lt; 0.$ Hence Elmer should play champion-father-champion.
 <p><a
 href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
 class="ans" id="lab3">
-Let $A,B$ and $C$, respecively, be the probabilities
+Let $A,B$ and $C$, respecively, be the events
 that the first, second and third man in the three man jury  
 reaches the correct conclusion. Then $P(A)=P(B)=p$
-and $P(C)=\frac 12,$ ad the three events are independent. 
+and $P(C)=\frac 12,$ and the three events are independent. 
 Then the event that this jury makes the correct decision is 
 $(A\cap B\cap C^c)\cup(A\cap B^c\cap C)\cup(A^c\cap B\cap
 C)\cup(A\cap B\cap C).$
@@ -593,12 +574,14 @@ $2^{-100}{100 \choose 50}\approx 0.08.$
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
+class="ans" id="lab5">Deliberately missing (<i>e.g.</i>, firing in the air) is also a possible option!</div></p>
+
 </p>
 
 </ol>
-
-<p></p>
-
 
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
