--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -2,6 +2,10 @@
 <body>
 <dl>
 
+<dt><b>August 04, 2025:</b></dt>
+<dd>Added a hint to the last problem in the <a href="indep.html"
+target="naya">Independence</a> page.</dd>
+
 <dt><b>July 30, 2025:</b></dt>
 <dd>Simplification to R code in the <a href="basic.html"
 target="naya">basic concepts</a> page.</dd>
