--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -3,8 +3,12 @@
 <dl>
 
 <dt><b>August 04, 2025:</b></dt>
-<dd>Added a hint to the last problem in the <a href="indep.html"
-target="naya">Independence</a> page.</dd>
+<dd><ul><li>Added the elegant solution discussed in class to exercise 24 in the <a href="basic.html"
+target="naya">basic concepts</a> page. Also corrected the earlier solution.</li>
+<li>Added a hint to the last problem in the <a href="indep.html"
+target="naya">Independence</a> page.</li>
+</ul>
+</dd>
 
 <dt><b>July 30, 2025:</b></dt>
 <dd>Simplification to R code in the <a href="basic.html"
