"defn to concepts"

--- a/prob1_2025/index.html
+++ b/prob1_2025/index.html
@@ -150,23 +150,7 @@ function myFunction() {
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3/>
-<ul>
-<li>
-<a href="#Probability Theory I">Probability Theory I</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Class notes">Class notes</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Survival tips">Survival tips</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Textbooks">Textbooks</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Syllabus">Syllabus</a>
-</li>
-</ul>
+<ul/>
 <hr/>
 
 
@@ -216,7 +200,7 @@ Before midsem:
 </li>
 
 <li>
-<a href="basic.html">Basic definitions</a>
+<a href="basic.html">Basic concepts</a>
 </li>
 
 <li>
