"reformat,exr, exm to indep"

--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -106,8 +106,13 @@ body,table {
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -143,8 +148,8 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
+<h3/>
 <ul>
 <li>
 <a href="#Standard discrete distributions ">Standard discrete distributions </a>
@@ -173,7 +178,7 @@ function myFunction() {
 </ul>
 <hr/>
 
-<h1><a
+<h1 xmlns=""><a
 name="Standard discrete distributions ">Standard discrete distributions </a></h1>
 
 <h1><a
@@ -277,7 +282,7 @@ following probabilities.
 </ol>
 
 <p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
 class="ans" id="lab1"><ol>
 <li>$\frac15$
 </li>
@@ -310,7 +315,7 @@ following probabilities.
 </ol>
 
 <p><a
-href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
 class="ans" id="lab2"><ol>
 <li>$\frac25$
 </li>
@@ -350,7 +355,7 @@ $$
 </ol>
 
 <p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
 class="ans" id="lab3">A deck has 52 cards: 13 of them are hearts, 13 are
 diamonds, 13 clubs and 13 spades. When you pick the top card of a
 well-shuffled deck any of the 52 cards are equally likely to occur.
@@ -412,7 +417,7 @@ $E(Y)$ and $Var(Y).$ But before you start algebraic
 manipulations, think if $E(X)$ and $Var(X)$ should be
 less, equal or more than what we obtained above.
 <p><a
-href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
 class="ans" id="lab4">\frac{n}2,\frac{n(n+2)}{12}.</div></p>
 
 </p>
@@ -620,7 +625,7 @@ List all the possible outcomes of $n=4$ tosses having exactly
 $x=2$ heads. For example, one possible outcome is $HTHT.$ How
 many such outcomes are there?
 <p><a
-href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
 class="ans" id="lab5">HHTT,HTHT,HTTH,THHT,THTH,TTHH. There are 6.</div></p>
 
 </p>
@@ -659,7 +664,7 @@ probabilities.
 </ol>
 
 <p><a
-href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
 class="ans" id="lab6"><ol>
 <li>$\frac1{81}$
 </li>
@@ -688,7 +693,7 @@ $Z\sim$<b>Bin</b>$(5,\frac12).$ Find the following.
 </ol>
 
 <p><a
-href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
 class="ans" id="lab7"><ol>
 <li>$\frac12$
 </li>
@@ -709,7 +714,7 @@ that $$
 P(X=a) = P(X = 37).
 $$
 <p><a
-href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab8')"><b>[Hint]</b></a><div
 class="ans" id="lab8">$a=100-37=63.$
 <p></p>
 Notice that for any $n$ the <b>Bin</b>$(n,0.5)$
@@ -744,7 +749,7 @@ the number of `1' s. Hence $X$ has <b>Bin</b>(6, 0.4) distribution.
 In the above example let $Y$ be the number of girls. What is the
 distribution of $Y$? 
 <p><a
-href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
 class="ans" id="lab9">$Y\sim$<b>Bin</b>$(6,0.6).$</div></p>
 </p>
 
@@ -906,7 +911,7 @@ If $X_1,X_2$ and $X_3$ are independent random variables with
 <b>Bin</b>$(6,\frac13)$ distributions, respectively.
 Find the distribution of $(X_1+X_2+X_3).$
 <p><a
-href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
 class="ans" id="lab10">$(X_1+X_2+X_3)\sim$<b>Bin</b>$(21,\frac13).$
 <p></p>
 First add $X_1$ and $X_2.$ Now notice that 
@@ -1023,7 +1028,7 @@ probabilities.
 </ol>
 
 <p><a
-href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
 class="ans" id="lab11"><ol>
 <li>$\frac2{15}$
 </li>
@@ -1048,7 +1053,7 @@ $$
 P(Y=10),\quad P(Z=30)
 $$
 <p><a
-href="javascript:hideShow('lab12')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
 class="ans" id="lab12">Equal.
 Think of the following descriptions of $Y$ and
 $Z.$ In a box there are 100 balls, 30 of which are white, the
@@ -1146,7 +1151,7 @@ distribution with
 <p></p>
 
 <p><a
-href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
 class="ans" id="lab13"><ol>
 <li>$3,\frac23.$
 </li>
@@ -1417,7 +1422,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </center>
 
 <p><a
-href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
 class="ans" id="lab14">
 Let $X_i$  be indicator for there being a changeover at position $i$  for $i=2,...,n.$  By definition, there
  cannot be a changeover at $i=1.$  
@@ -1689,33 +1694,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 <p></p>
 
 <p></p>
-
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-this.page.url = "http://www.isical.ac.in/~arnabc/prob1/distrib.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "distrib"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
-
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
