--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -106,8 +106,13 @@ body,table {
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -143,8 +148,8 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
+<h3/>
 <ul>
 <li>
 <a href="#Infinite sample space">Infinite sample space</a>
@@ -173,7 +178,7 @@ function myFunction() {
 </ul>
 <hr/>
 
-<h1><a
+<h1 xmlns=""><a
 name="Infinite sample space">Infinite sample space</a></h1>
 
 <h2><a
@@ -518,7 +523,7 @@ The Geometric distributions are all memoryless. The next exercise asks you to pr
 <b>EXERCISE 7:</b>&nbsp;
 Let $X\sim Geom(p).$  Let $x\in{\mathbb N}$  show that $P(X\geq x+a | X\geq x)$  is free of $x.$
 <p><a
-href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
 class="ans" id="lab7">
 $P(X\geq x+a | X\geq x) = \frac{P(X\geq x+a \&amp; X\geq x)}{P( X\geq x)} = \frac{P(X\geq x+a)}{P( X\geq x)}$
 <p></p>
@@ -1060,59 +1065,59 @@ name="Problems for practice">Problems for practice</a></h1>
 <p></p>
 
 <p>
-<b>EXERCISE 17:</b>&nbsp;<img width="" src="image/infdist1.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 17:</b>&nbsp;<font size="-2">[infdist1.png]</font><img width="" src="image/infdist1.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 18:</b>&nbsp;<img width="" src="image/infdist2.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 18:</b>&nbsp;<font size="-2">[infdist2.png]</font><img width="" src="image/infdist2.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 19:</b>&nbsp;<img width="" src="image/infdist3.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 19:</b>&nbsp;<font size="-2">[infdist3.png]</font><img width="" src="image/infdist3.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 20:</b>&nbsp;<img width="" src="image/infdist4.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 20:</b>&nbsp;<font size="-2">[infdist4.png]</font><img width="" src="image/infdist4.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 21:</b>&nbsp;<img width="" src="image/infdist5.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 21:</b>&nbsp;<font size="-2">[infdist5.png]</font><img width="" src="image/infdist5.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 22:</b>&nbsp;<img width="" src="image/infdist6.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 22:</b>&nbsp;<font size="-2">[infdist6.png]</font><img width="" src="image/infdist6.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 23:</b>&nbsp;<img width="" src="image/infdist7.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 23:</b>&nbsp;<font size="-2">[infdist7.png]</font><img width="" src="image/infdist7.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 24:</b>&nbsp;<img width="" src="image/infdist8.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 24:</b>&nbsp;<font size="-2">[infdist8.png]</font><img width="" src="image/infdist8.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 25:</b>&nbsp;<img width="" src="image/infdist9.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 25:</b>&nbsp;<font size="-2">[infdist9.png]</font><img width="" src="image/infdist9.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 26:</b>&nbsp;<img width="" src="image/infdist10.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 26:</b>&nbsp;<font size="-2">[infdist10.png]</font><img width="" src="image/infdist10.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 27:</b>&nbsp;<img width="" src="image/infdist11.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 27:</b>&nbsp;<font size="-2">[infdist11.png]</font><img width="" src="image/infdist11.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 28:</b>&nbsp;<img width="" src="image/infdist12.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 28:</b>&nbsp;<font size="-2">[infdist12.png]</font><img width="" src="image/infdist12.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 29:</b>&nbsp;<img width="" src="image/infdist13.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 29:</b>&nbsp;<font size="-2">[infdist13.png]</font><img width="" src="image/infdist13.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
-<b>EXERCISE 30:</b>&nbsp;<img width="" src="image/infdist14.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 30:</b>&nbsp;<font size="-2">[infdist14.png]</font><img width="" src="image/infdist14.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p>
@@ -1159,33 +1164,7 @@ box $n$ times without ever using the other box.]
 <p></p>
 
 <p></p>
-
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-this.page.url = "http://www.isical.ac.in/~arnabc/prob1/distrib.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "distrib"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
-
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
