--- a/prob1_2025/indep.html
+++ b/prob1_2025/indep.html
@@ -150,9 +150,27 @@ function myFunction() {
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3/>
-<ul/>
+<ul>
+<li>
+<a href="#Independence">Independence</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Two events">Two events</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#More than two events">More than two events</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Product space">Product space</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Infinite product">Infinite product</a>
+</li>
+<li>
+<a href="#Problems for practice">Problems for practice</a>
+</li>
+</ul>
 <hr/>
-
 
 <h1 xmlns=""><a
 name="Independence">Independence</a></h1>
@@ -390,6 +408,31 @@ infinite series of nonnegative terms may be
 
 <p></p>
 
+<p>
+<b>EXAMPLE 5:</b>&nbsp;I have two dice with probabilities 
+$\left(\frac{1}{16}, \frac{2}{16}, \frac{4}{16}, \frac{3}{16}, \frac{1}{16}, \frac{5}{16}\right)$  and $\left(\frac{2}{12}, \frac{1}{12}, \frac{2}{12}, \frac{1}{12}, \frac{4}{12}, \frac{2}{12}\right)$.
+ These ar rolled independently. What is the probability that both of the show the same number?<p></p>
+<b>SOLUTION:</b>
+Let $A = $  the event in question.
+<p></p>
+Then $A = A_1\cup \cdots \cup A_6$, where $A_i = $  the event that both the dice show $i$. 
+<p></p>
+Since a die cannot show two different numbers simulataneously, hence $A_i$'s are disjoint.
+<p></p>
+Now $P(A_i) = P(\mbox{first die shows }i)\times P(\mbox{second die shows }i)$, since the ice are rolled independently.
+ So 
+$$\begin{eqnarray*}
+P(A_1) &amp; = &amp; \frac{1}{16}\times\frac{2}{12}\\
+P(A_2) &amp; = &amp; \frac{2}{16}\times\frac{1}{12}\\
+P(A_3) &amp; = &amp; \frac{4}{16}\times\frac{2}{12}\\
+P(A_4) &amp; = &amp; \frac{3}{16}\times\frac{1}{12}\\
+P(A_5) &amp; = &amp; \frac{4}{16}\times\frac{1}{12}\\
+P(A_6) &amp; = &amp; \frac{2}{16}\times\frac{5}{12}.
+\end{eqnarray*}$$
+Since the $A_i$'s are independent, hence $P(A) = \sum_1^6 P(A_i)$.
+ ■
+</p>
+
 <h2><a
 name="Infinite product">Infinite product</a></h2>
 We shall often talk about an infinite sequence of random experiments, <i>e.g.</i>, keep on tossing a coin again and again. Mathematically,
@@ -413,7 +456,7 @@ In this course, we shall assume the existence and uniqueness of infinite product
 <p></p>
 
 <p>
-<b>EXAMPLE 5:</b>&nbsp;
+<b>EXAMPLE 6:</b>&nbsp;
 A coin with $P(head)=p\in(0,1)$ is tossed again and
 again independently. Show that we must get a head eventually.
 <p></p>
@@ -478,7 +521,17 @@ name="Problems for practice">Problems for practice</a></h1>
 <b>EXERCISE 11:</b>&nbsp;If $P(A_i)=p_i$  for $i=1,2,3,$  and $A_i$'s are mutually independent, then find $P(A_1\cup A_2\cup A_3).$</p>
 
 <p>
-<b>EXERCISE 12:</b>&nbsp;<center>
+<b>EXERCISE 12:</b>&nbsp;If two fair dice are rolled independently, find the probability that the first shows a number
+ strictly larger than the second. </p>
+
+<p>
+<b>EXERCISE 13:</b>&nbsp;If two fair dice are rolled independently, find the probability that the first number
+divides the second. </p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 14:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most2.png"></th>
@@ -512,7 +565,7 @@ So $A-B &lt; 0.$ Hence Elmer should play champion-father-champion.
 <p></p>
 
 <p>
-<b>EXERCISE 13:</b>&nbsp;<center>
+<b>EXERCISE 15:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most3.png"></th>
@@ -544,7 +597,7 @@ So both the jury are equally likely to reach the correct decision.
 </p>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;<center>
+<b>EXERCISE 16:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most18.png"></th>
@@ -564,7 +617,7 @@ $2^{-100}{100 \choose 50}\approx 0.08.$
 </p>
 
 <p>
-<b>EXERCISE 15:</b>&nbsp;<center>
+<b>EXERCISE 17:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most20.png"></th>
@@ -583,6 +636,7 @@ class="ans" id="lab5">Deliberately missing (<i>e.g.</i>, firing in the air) is a
 
 </ol>
 
+<p></p>
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
