--- a/prob1_2025/mom.html
+++ b/prob1_2025/mom.html
@@ -148,7 +148,7 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3/>
 <ul>
 <li>
@@ -165,7 +165,6 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
-
 
 <p xmlns=""></p>
 
@@ -580,7 +579,6 @@ Since $CDF$  is unique for a distribution, hence $X$  and $a+bY$  have the same 
 </div></p>
 
 </p>
-
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
