--- a/prob1_2025/bayes.html
+++ b/prob1_2025/bayes.html
@@ -413,7 +413,7 @@ $$P(A_1\cap\cdots\cap A_n\cap B) = P(A_1)P(A_2|A_1)P(A_3|A_1\cap A_2)\cdots P(B|
 <h2><a
 name="Theorem of total probability">Theorem of total probability</a></h2>
 Sometimes an event can occur via different paths. To find the probability of such an event 
-we need to add the probabilitis of all the paths. This is leads to the theorem of total probability.
+we need to add the probabilitis of all the paths. This leads to the theorem of total probability.
 <p></p>
 
 <fieldset>
