--- a/prob1_2025/indep.html
+++ b/prob1_2025/indep.html
@@ -375,6 +375,42 @@ $$\Omega = \{(H,1),(H,2),(H,3),(H,4),(H,5),(H,6),(T,1),(T,2),(T,3),(T,4),(T,5),(
 Now for each singleton set of the form $\{(a,b)\}$  we define the probability 
 $P(\{(a,b)\}) = P_1(\{a\})\times P_2(\{b\}).$  This uniquely determines $P(A)$  for all $A\subseteq\Omega$  via
  the probability axioms.</blockquote>
+
+<p></p>
+
+<p>
+<b>EXAMPLE 5:</b>&nbsp;If the two random experiments are rolling a (fair) die, and these are carried out
+ independently, then the product space may be visualised as 36 points arranged in a square:
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/prod1.png"></th>
+</tr>
+<tr>
+<th>Product space of two die rolls</th>
+</tr>
+</table>
+</center>
+The space is the Cartesian product of the individual spaces. The sample points are the Cartesian products of the individual
+ sample points. But the events in this product space need not always be Cartesian products of
+ events of the two random experiments. Consider the two events shown below:
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/prod2.png"></th>
+</tr>
+<tr>
+<th>Two events in the product space</th>
+</tr>
+</table>
+</center>
+ Here $A$  is indeed the Cartesian product of two events (one from each experiment): 
+$$A = \{2,3,4\}\times\{2,3,4,5\}$$.
+But $B$  cannot be exprssed as a similar Cartesian product. Notice that $A$  looks like a box in the diagram. Indeed,
+ events that can be expressed as Cartesian products of events from the individual random experimnts are sometimes called
+ <b><font color="red" size="40">box</font></b> events. These play important role when working with infinitely many random experiments.
+  ■
+</p>
 The same construction may be generalised easily for any finite number of random experiments. 
 <p></p>
 Any $A_1\subseteq\Omega_1$  has a natural counterpart in $A\subseteq \Omega$  as 
@@ -386,13 +422,13 @@ We rarely use different symbols for $A$  and $A_1.$  Just as a real number is co
 For example, in the "coin toss$\times$ die roll" example, the event $\{$ die shows 3$\}$  becomes 
 $\{(H,3), (T,3)\}.$
 <p></p>
-With this natural extension, we have the following important theorem.
+With this natural extension, we have the following important theorem about box events.
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
 Let $\Omega_1,\Omega_2,\Omega,P_1,P_2,P$  be as above. Then for any $A_1\subseteq \Omega_1$  and any 
 $A_2\subseteq \Omega_2$  we have $P(A_1\times A_2)  = P_1(A_1)P_2(A_2).$
 </fieldset>
-The statement of this theorem had a serious flaw, which was pointed out by Vrajishnu. The flaw has now been corrected.
+
 <p>
 <b><i>Proof:</i></b>
 The proof is easy if $A_1$  and $A_2$  are both finite. 
@@ -409,7 +445,7 @@ infinite series of nonnegative terms may be
 <p></p>
 
 <p>
-<b>EXAMPLE 5:</b>&nbsp;I have two dice with probabilities 
+<b>EXAMPLE 6:</b>&nbsp;I have two dice with probabilities 
 $\left(\frac{1}{16}, \frac{2}{16}, \frac{4}{16}, \frac{3}{16}, \frac{1}{16}, \frac{5}{16}\right)$  and $\left(\frac{2}{12}, \frac{1}{12}, \frac{2}{12}, \frac{1}{12}, \frac{4}{12}, \frac{2}{12}\right)$.
  These ar rolled independently. What is the probability that both of the show the same number?<p></p>
 <b>SOLUTION:</b>
@@ -442,21 +478,22 @@ $$\Omega = \Omega_1\times\Omega_2\times\cdots,$$
 which means each element of $\Omega$  is a sequence $(a_1,a_2,...),$  where $a_n\in\Omega_n.$  Any $A_n\subseteq \Omega_n$ 
  is lifted to a subset of $\Omega$  as $\{(a_1,...)~:~a_n\in A_n~,~\forall i\neq n~~a_i\in\Omega_i\}.$
 Then we want a probability $P$  on $\Omega$  such that for any $A_{n_i}\subseteq \Omega_{n_i}$  for $i=1,...,k$ 
- we have them mutually indepndent under $P.$  Such a $P$  indeed exists and is unique. Unfortunately,
+(for any  $k\in{\mathbb N}$)
+ we have them mutually independent under $P.$  Such a $P$  indeed exists and is unique. Unfortunately,
  this is rather  technical to prove. 
 <p></p>
 A few of the difficulties are:
 <ul>
 <li>$\Omega$  is uncountable even if all the $\Omega_n$'s are finite (with at least two elements).</li>
 
-<li>This $\Omega$  will have "bad" subsets, that we need to avoid.</li>
+<li>This $\Omega$  will have "bad" subsets for which probability cannot be defined!</li>
 
 </ul>
 In this course, we shall assume the existence and uniqueness of infinite product spaces.
 <p></p>
 
 <p>
-<b>EXAMPLE 6:</b>&nbsp;
+<b>EXAMPLE 7:</b>&nbsp;
 A coin with $P(head)=p\in(0,1)$ is tossed again and
 again independently. Show that we must get a head eventually.
 <p></p>
