--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,7 +1,10 @@
 <html><body>
 <dl>
 <dt><strong>August 06, 2025:</strong></dt>
-<dd><p>Added an example and two exercises to the <a href="indep.html" target="naya">Independence</a> page.</p>
+<dd><ul>
+<li>Added an example and two exercises to the <a href="indep.html" target="naya">Independence</a> page.</li>
+<li>Introduced the concept of box events in the same page.</li>
+</ul>
 </dd>
 <dt><strong>August 04, 2025:</strong></dt>
 <dd><ul>
