--- a/prob1_2025/basic.html
+++ b/prob1_2025/basic.html
@@ -1413,13 +1413,19 @@ required probability is $\frac 35+\frac 35-\frac{3}{10} = \frac{9}{10}.$
 <p>
 <b>EXERCISE 14:</b>&nbsp;A fair coin is tossed 6 times. What is the probability that
 the first head occurs (a) at the third toss? (b) not before the
-third toss?<p><a
+third toss? (Here in part (b) we also allow the case where no head occurs.) <p><a
 href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
-class="ans" id="lab9">Total number of outcomes is $2^6.$ All are equally
+class="ans" id="lab9">Total number of outcomes is
+ $2^6.$ All are equally
 likely. (a) Number of favorable outcomes is $2^3.$ So the
 probability is $2^{-3}.$ (b) Similarly, the probability that
-the first head occurs at the $i$-th toss is $2^{i-6}.$
-So the required probability is $1-2^{-5}-2^{-4}.$
+the first head occurs at the $i$-th toss is $\frac{2^{6-i}}{2^6} = 2^{-i}.$
+So the required probability is $1-2^{-1}-2^{-2} = \frac 14.$  
+<p></p>
+A simpler way for part (b) is to notice that the event is same as "First
+ two tosses result in tails". So the probability is $\frac{2^4}{2^6} = \frac 14$.
+<p></p>
+[Thanks to the students for a correction here.]
 </div></p>
 </p>
 
