--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,7 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>August 08, 2025:</strong></dt>
+<dd><p>Correction to the solution of exercise 19 in the <a href="basic.html" target="naya">basic concepts</a> page suggested by the students.</p>
+</dd>
 <dt><strong>August 07, 2025:</strong></dt>
-<dd><p>Correction to a solution in the <a href="basic.html" target="naya">basic concepts</a> page suggested by the students.</p>
+<dd><p>Correction to the solution of exercise 14 in the <a href="basic.html" target="naya">basic concepts</a> page suggested by the students.</p>
 </dd>
 <dt><strong>August 06, 2025:</strong></dt>
 <dd><ul>
