--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -1431,6 +1431,25 @@ So either $w_1 = 0$  or $w_2 = 0$  or $k-w_2 = 0.$  Here $w_1$  cannot be zero, 
 </div></p>
 
 </p>
+::<p>
+<b>EXERCISE 15:</b>&nbsp;Let $u_{2n}$ denote the probability that a random path
+of length $2n$ starting from $(0,0)$ passes
+through $(2n,0).$ Also, let $u_0=1.$ Let $v_{2n}$
+denote the probability that a random path of length $2n$
+starting from $(0,0)$ returns to 0 for the first time
+at $2n.$  Then show without using the explicit form
+of $u_{2n}$ and $v_{2n}$ that
+$$
+v_2 u_{2n-2} + \cdots + v_{2n} u_0 = u_{2n}.
+$$
+[Corrected an error pointed out by Krishnam Baregama.]
+<p><a
+href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
+class="ans" id="lab12">Condition on the first time the path returns to zero, and then use the theorem of total probability.</div></p>
+
+</p>
+
+<p></p>
 
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
