--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,7 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>August 18, 2025:</strong></dt>
+<dd><p>Corrected the hint to Exercise 49 in the <a href="bayes.html" target="naya">conditional probabilty</a> page. Thanks to Rishit Garg.</p>
+</dd>
 <dt><strong>August 17, 2025:</strong></dt>
-<dd><p>Removed an exercise (it was Exercise 8) from the <a href="bayes.html" target="naya">conditional probabilty</a> page. It has been moved to a topic to be covered near the end of the course.</p>
+<dd><p>Removed an exercise (it was Exercise 8) from the <a href="bayes.html" target="naya">conditional probabilty</a> page. It has been moved to a topic near the end of the course.</p>
 </dd>
 <dt><strong>August 08, 2025:</strong></dt>
 <dd><p>Correction to the solution of exercise 19 in the <a href="basic.html" target="naya">basic concepts</a> page suggested by the students.</p>
