--- a/prob1_2025/bayes.html
+++ b/prob1_2025/bayes.html
@@ -1602,9 +1602,9 @@ Here $|A|=4\times 48\times\cdots\times(48-19+1)$,
 <p></p>
 $|A\cap B| = 1\times 3\times
  48\times\cdots\times(48-19+1)$  and 
-$|A\cap C| = 1\times 4\times 48\times\cdots\times(48-19+1).$
+$|A\cap C| = 1\times 4\times 47\times\cdots\times(47-19+1).$
 <p></p>
-[Corrected a mistake pointed out by Arnab Nayak.]
+[Corrected a mistake pointed out by Roshan.]
 </div></p>
 
 </p>
