--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,8 @@
 <html><body>
 <dl>
+<dt><strong>August 19, 2025:</strong></dt>
+<dd><p>Corrected the hint to Exercise 31 in the <a href="bayes.html" target="naya">conditional probabilty</a> page. Thanks to Roshan.</p>
+</dd>
 <dt><strong>August 18, 2025:</strong></dt>
 <dd><p>Corrected the hint to Exercise 49 in the <a href="bayes.html" target="naya">conditional probabilty</a> page. Thanks to Rishit Garg.</p>
 </dd>
