"rv no measure"

--- a/prob1_2025/rv.html
+++ b/prob1_2025/rv.html
@@ -183,7 +183,7 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
-
+$\newcommand{\pow}{{\mathcal P}}$
 <h1 xmlns=""><a
 name="Random variables">Random variables</a></h1>
 
@@ -261,6 +261,12 @@ The complicated looking set $\big\{w\in\Omega~:~X(w)\in A\big\}$ is
 often abbreviated to $\{X\in A\}$ or $X ^{-1} (A).$
 <p></p>
 
+<img src="image/alert.png">Don't let the notation $X ^{-1}$  make you think that $X:\Omega\rightarrow{\mathbb R}$  has to be
+ invertible. For any $f:A\rightarrow B$  we can define $f ^{-1}:\pow(B)\rightarrow\pow(A)$  as follows (here $\pow$  denotes
+ power set, <i>i.e.</i>, the set of all subsets):
+for $V\in\pow(B)$  we define $f  ^{-1}(V)=\{a\in A~:~f(a)\in V\}$. 
+<p></p>
+
 <h1><a
 name="New random variables from old ones">New random variables from old ones</a></h1>
 
@@ -300,12 +306,8 @@ Now it is meaningful to talk about $X+Y.$
 <h2><a
 name="Functions of a random variable">Functions of a random variable</a></h2> 
 Is any function of a random variable is again a random
-variable? Well, for all practical purposes the answer is "yes".  But technically speaking, we have to 
-avoid the "bad" subsets. This is how we do it.
-<p></p>
-Let $X:\Omega\rightarrow{\mathbb R}$  be any random variable. Let $f:{\mathbb R}\rightarrow{\mathbb R}$  be any Borel-mesurable function, <i>i.e.</i>, if $B\in {\mathcal B}$ 
- then $f^{-1}(B)\in {\mathcal B}.$  Then $f(X)$  is again a random variable. Remember that $f(X)$  actually
- means the composition function $(f\circ X):\Omega\rightarrow{\mathbb R}.$
+variable? Well, for if our $\Omega$  is a countable set (finite/infinite), then 
+the answer is "yes".  We shall not worry about the uncountable case here. 
 <p></p>
 
 <h1><a
