"rv no measure"

--- a/prob1_2025/rv.html
+++ b/prob1_2025/rv.html
@@ -353,12 +353,12 @@ the function.
 <fieldset>
 <legend><b>Definition: Distribution of a random variable</b></legend>
 By the <b><font color="red" size="40">distribution</font></b> of a random variable $X$  we mean any statement that gives us $P(X\in B)$  for
- any "good" set $B\subseteq{\mathbb R}.$  
+ any  set $B\subseteq{\mathbb R}.$  
 </fieldset>
 
 <p></p>
-How do we specify the distribution of a random variable? Do we make a list of all the "good" sets, and label them with
-their probabilities? That would woul be insane, because there are uncountaly infinitely many "good" sets. 
+How do we specify the distribution of a random variable? Do we make a list of all the subsets of ${\mathbb R}$, and label them with
+their probabilities? That would woul be insane, because there are uncountaly infinitely many such subsets. 
 It turns out that specifying the probabilities of intervals like $(-\infty, a]$  is enough.
  This is what we discuss next.  
 <h2><a
