"blank hints filled"

--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,7 +1,10 @@
 <html><body>
 <dl>
 <dt><strong>August 20, 2025:</strong></dt>
-<dd><p>Slightly simplified the discussion in the <a href="rv.html" target="naya">random variables</a> page.</p>
+<dd><ul>
+<li>Blank hints filled in the <a href="bayes.html" target="naya">conditional probabilty</a> page.</li>
+<li>Slightly simplified the discussion in the <a href="rv.html" target="naya">random variables</a> page.</li>
+</ul>
 </dd>
 <dt><strong>August 19, 2025:</strong></dt>
 <dd><p>Corrected the hint to Exercise 31 in the <a href="bayes.html" target="naya">conditional probabilty</a> page. Thanks to Roshan.</p>
