--- a/prob1_2025/rv.html
+++ b/prob1_2025/rv.html
@@ -358,7 +358,7 @@ By the <b><font color="red" size="40">distribution</font></b> of a random variab
 
 <p></p>
 How do we specify the distribution of a random variable? Do we make a list of all the subsets of ${\mathbb R}$, and label them with
-their probabilities? That would woul be insane, because there are uncountaly infinitely many such subsets. 
+their probabilities? That would be insane, because there are uncountably infinitely many such subsets. 
 It turns out that specifying the probabilities of intervals like $(-\infty, a]$  is enough.
  This is what we discuss next.  
 <h2><a
