--- a/prob1_2025/bayes.html
+++ b/prob1_2025/bayes.html
@@ -1648,7 +1648,7 @@ class="ans" id="lab28"><center>
 
 <p><a
 href="javascript:hideShow('lab29')"><b>[Hint]</b></a><div
-class="ans" id="lab29"></div></p>
+class="ans" id="lab29">$\frac{0.40\times \frac{1}{2} }{ 0.40\times \frac{1}{2} + 0.60\times \frac{2}{5} }$.</div></p>
 
 </p>
 ::<p>
@@ -1665,7 +1665,7 @@ class="ans" id="lab29"></div></p>
 
 <p><a
 href="javascript:hideShow('lab30')"><b>[Hint]</b></a><div
-class="ans" id="lab30"></div></p>
+class="ans" id="lab30">$\frac{ \frac{1}{2}\times \left(\frac{1}{3}\times\frac{1}{2}\right) }{  \frac{1}{2}\times \left(\frac{1}{3}\times\frac{1}{2}\right)+ \frac{1}{2}\times \left(\frac{1}{3}\times\frac{1}{6}\right) }$.</div></p>
 
 </p>
 ::<p>
@@ -1679,10 +1679,15 @@ class="ans" id="lab30"></div></p>
 </tr>
 </table>
 </center>
-
+This problem is not very clear. Interpret it like this. God picks up a random employee (from the totality
+ of all the 225 employees) and puts the idea of resignation into his/her head. Given that this employee is a woman, what
+ is the conditional probability that she works in store C.
 <p><a
 href="javascript:hideShow('lab31')"><b>[Hint]</b></a><div
-class="ans" id="lab31"></div></p>
+class="ans" id="lab31">0, of course! She has already resigned. So how can she work for store C <i>now</i>? (Just kidding!)
+<p></p>
+But if we want the conditional probability that she <i>worked</i>  for store C, it is $\frac{100\times0.7}{50\times0.5+75\times0.6+100\times0.7}$.
+</div></p>
 
 </p>
 ::<p>
@@ -1699,7 +1704,12 @@ class="ans" id="lab31"></div></p>
 
 <p><a
 href="javascript:hideShow('lab32')"><b>[Hint]</b></a><div
-class="ans" id="lab32"></div></p>
+class="ans" id="lab32">(a) $\frac{ \frac{1}{2}\times\frac{1}{2} }{ \frac{1}{2}\times\frac{1}{2}+\frac{1}{2}\times1 }$.
+<p></p>
+(b) $\frac{ \frac{1}{2}\times\frac{1}{2} }{ \frac{1}{2}\times\frac{1}{4}+\frac{1}{2}\times1 }$.
+<p></p>
+(c) $1$.
+</div></p>
 
 </p>
 ::<p>
@@ -1716,7 +1726,7 @@ class="ans" id="lab32"></div></p>
 
 <p><a
 href="javascript:hideShow('lab33')"><b>[Hint]</b></a><div
-class="ans" id="lab33"></div></p>
+class="ans" id="lab33">$\frac{ \frac{1}{2}\times\frac{3}{15} }{ \frac{1}{2}\times\frac{5}{12}+\frac{1}{2}\times\frac{3}{15} }$</div></p>
 
 </p>
 ::<p>
@@ -1733,7 +1743,14 @@ class="ans" id="lab33"></div></p>
 
 <p><a
 href="javascript:hideShow('lab34')"><b>[Hint]</b></a><div
-class="ans" id="lab34"></div></p>
+class="ans" id="lab34">(a) $\frac{7\times 8\times 9}{12\times13\times14}$.
+<p></p>
+(b) $3\times \frac{7\times 8\times 5}{12\times13\times14}$.
+<p></p>
+(c) $\frac{5\times 6\times 7}{12\times13\times14}.$
+<p></p>
+(d) $3\times \frac{5\times 6\times 7}{12\times13\times14}$.
+</div></p>
 
 </p>
 ::<p>
@@ -1750,7 +1767,13 @@ class="ans" id="lab34"></div></p>
 
 <p><a
 href="javascript:hideShow('lab35')"><b>[Hint]</b></a><div
-class="ans" id="lab35"></div></p>
+class="ans" id="lab35">Let $B = $  the event that the drawn card is an ace. Let $A = $  the event that the
+ interchanged card is selected. 
+<p></p>
+Then $P(A) = \frac{1}{27}$. Also $P(B|A) = 1$  and$P(B|A^c) = \frac{1}{13}$. 
+<p></p>
+Now apply the theorem of total probability.
+</div></p>
 
 </p>
 ::<p>
@@ -1767,7 +1790,8 @@ class="ans" id="lab35"></div></p>
 
 <p><a
 href="javascript:hideShow('lab36')"><b>[Hint]</b></a><div
-class="ans" id="lab36"></div></p>
+class="ans" id="lab36">Jailer's reasoning is incorrect. It is just the Monty Hall paradox. Here $P(A)$  remains
+ $\frac 13$. The other guy (after the jailor has eliminated the third) rises from $\frac 13$  to $\frac 23$. </div></p>
 
 </p>
 ::<p>
